<resources>
    <string name="app_name">HajmolaUP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="school_units_distributed">Units Distributed: %s</string>
    <string name="school_address_str">Address: %s</string>
    <string name="school_city_str">City: %s</string>
    <string name="school_state_str">State: %s</string>
    <string name="school_date_str">Date: %s</string>
    <string name="school_uploaded_by_str">Uploaded By: %s</string>
    <string name="address">Address: %1$s</string>
    <string name="city">City: %1$s</string>
    <string name="state">State: %1$s</string>
    <string name="pin_code">Pin Code: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="board">Board: %1$s</string>
    <string name="up_to_class">Up to class: %1$s</string>

</resources>