<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    app:cardElevation="6dp"
    app:cardCornerRadius="12dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/schoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="School Name"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addressSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_address_str"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/citySchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_city_str"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressSchool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_state_str"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citySchool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/unitDistributedSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_units_distributed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stateSchool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventDateSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_date_str"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unitDistributedSchool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uploadedBySchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_uploaded_by_str"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventDateSchool" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadedBySchool">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deleteData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Delete Data"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/viewDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="View Details >>"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_weight="1"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>